# eval-hub

./: .coderabbit.yaml  .conf.go-integration-test  .conf.go-test  .dockerignore  .gitignore  .pre-commit-config.yaml  .redocly.lint-ignore.yaml  API.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Containerfile  Dockerfile.konflux  MLFLOW.md  Makefile  OWNERS  README-GO.md  README.md  codecov.yml  go.mod  go.sum  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  commitlint.yml  publish-python-server.yml
auth/: authentication.go  authorization.go  config.go  readme.md  rules.go  rules_test.go
auth/examples/: roles.yaml
auth/testdata/: rbac_jobs.yaml  rbac_mixed.yaml  rbac_query.yaml
cmd/eval_hub/: main.go
config/: auth.yaml  config.yaml  server.yaml
config/providers/: garak.yaml  guidellm.yaml  lighteval.yaml  lm_evaluation_harness.yaml  ragas.yaml
containers/lighteval/: build.sh
docs/: README.md  index-private.html  index-public.html  index.html  openapi-internal.json  openapi-internal.yaml  openapi.json  openapi.yaml  redocly.yaml
docs/old/: openapi.json  openapi.yaml
docs/src/: openapi.yaml
examples/: api_examples.ipynb
internal/abstractions/: error.go  (+2 more)
python-server/: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  setup.py
python-server/evalhub_server/: __init__.py  main.py
scripts/: grcat  start_server.sh  stop_server.sh
tests/: config.yaml  conftest.py
(+249 files in other folders)
